--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<link rel="icon" href="../github.io/images/icon-coast.png" sizes="228x228">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-	<script src="../github.io/js/jquery.fittext.js"></script>
-	<script src="../github.io/js/custom-scripts.js"></script>
-	<script src="../github.io/js/modernizr.js"></script>	
+	<script src="github.io/js/jquery.fittext.js"></script>
+	<script src="github.io/js/custom-scripts.js"></script>
+	<script src="github.io/js/modernizr.js"></script>	
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<link rel="stylesheet" href="css/ie.css">
