--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<meta http-equiv="cleartype" content="on">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../github.io/css/rzeav4.css">
-	<link rel="icon" href="../github.io/images/icon-coast.png" sizes="228x228">
+	<link rel="stylesheet" href="/github.io/css/rzeav4.css">
+	<link rel="icon" href="/github.io/images/icon-coast.png" sizes="228x228">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
 	<script src="github.io/js/jquery.fittext.js"></script>
