--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<meta http-equiv="cleartype" content="on">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/github.io/css/rzeav4.css">
+	<link rel="stylesheet" href="css/rzeav4.css">
 	<link rel="icon" href="/github.io/images/icon-coast.png" sizes="228x228">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
@@ -164,7 +164,7 @@
  
   <footer>
 	<hr>
-	<p><span class="sys-font">&copy;</span> 2012 - <script src="../github.io/js/year.js"></script>	
+	<p><span class="sys-font">&copy;</span> 2012 - <script src="js/year.js"></script>	
       </p>
 
 
@@ -173,7 +173,7 @@
       
     </footer>
 
-<script src="../github.io/js/retina.js"></script>
+<script src="js/retina.js"></script>
 </body>
   
   
