--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 	<meta http-equiv="cleartype" content="on">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/rzeav4.css">
+	<link rel="stylesheet" href="
+
+http://nataliapitts.github.io/natalia.github.io/
+css/rzeav4.css">
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
