--- a/index.html
+++ b/index.html
@@ -176,21 +176,60 @@ css/rzeav4.css">
       
     </footer>
     
-    <form method="post" action="contact.php">
- <table bgcolor=#ffffcc align=center>
- <tr><td colspan=2><strong>Contact us using this form:</strong></td></tr>
- <tr><td>Department:</td><td><select name="sendto"> <option value="PersonAemail@gmail.com">Person A</option> <option value="support@mycompany.com">Support</option> <option value="ThisEmail@hotmail.com">Person C</option> </select></td></tr>
- <tr><td><font color=red>*</font> Name:</td><td><input size=25 name="Name"></td></tr>
- <tr><td><font color=red>*</font> Email:</td><td><input size=25 name="Email"></td></tr>
- <tr><td>Company:</td><td><input size=25 name="Company"></td></tr>
- <tr><td>Phone:</td><td><input size=25 name="Phone"></td></tr>
- <tr><td>Subscribe to<br> mailing list:</td><td><input type="radio" name="list" value="No"> No Thanks<br> <input type="radio" name="list" value="Yes" checked> Yes, keep me informed<br></td></tr>
- <tr><td colspan=2>Message:</td></tr>
- <tr><td colspan=2 align=center><textarea name="Message" rows=5 cols=35></textarea></td></tr>
- <tr><td colspan=2 align=center><input type=submit name="send" value="Submit"></td></tr>
- <tr><td colspan=2 align=center><small>A <font color=red>*</font> indicates a field is required</small></td></tr>
- </table>
- </form>
+    <form name="htmlform" method="post" action="html_form_send.php">
+<table width="450px">
+</tr>
+<tr>
+ <td valign="top">
+  <label for="first_name">First Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+
+<tr>
+ <td valign="top"">
+  <label for="last_name">Last Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="last_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="email">Email Address *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+
+</tr>
+<tr>
+ <td valign="top">
+  <label for="telephone">Telephone Number</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="telephone" maxlength="30" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Comments *</label>
+ </td>
+ <td valign="top">
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+
+</tr>
+<tr>
+ <td colspan="2" style="text-align:center">
+  <!-- We are grateful to you for keeping this link in place. thank you. -->
+  <input type="submit" value="Submit">   ( <a href="http://www.freecontactform.com/html_form.php">HTML Form</a> )
+ </td>
+</tr>
+</table>
+</form>
 
 <script src="js/retina.js"></script>
 </body>
