--- a/feedback.html
+++ b/feedback.html
@@ -166,3 +166,8 @@ Form by <a href="http://www.thesitewizard.com/">thesitewizard.com</a>
 </table>
 </form>
 
+<!-- THESITEWIZARD.COM LINK CODE STARTS HERE -->
+<a href="http://www.thesitewizard.com/" target="_top">
+<img src="http://www.thesitewizard.com/images/tsw88x31pow.gif" border="0" alt="Free Site Design Tips and Tutorials at thesitewizard.com" width="88" height="31" /></a>
+<!-- THESITEWIZARD.COM LINK CODE ENDS HERE -->
+
