--- a/feedback.html
+++ b/feedback.html
@@ -1,4 +1,6 @@
-<?php /*
+
+<html>
+<body><?php /*
 
 	IMPORTANT: If you see this notice in your web browser when you
 	test your feedback form, it means that your web host does not
@@ -147,8 +149,7 @@ header( "Location: $thankyouurl" );
 exit ;
 
 ?>
-<html>
-<body>
+
 <form action="feedback.php" method="post">
 <table border="0" cellpadding="8" cellspacing="8">
 <tr><td><label for="tswname">Name</label>:</td><td><input type="text" name="fullname" id="tswname" size="25" /></td></tr>
