--- a/feedback.html
+++ b/feedback.html
@@ -150,6 +150,8 @@ exit ;
 
 ?>
 
+<a href="http://www.thesitewizard.com/wizards/feedbackform.shtml" target="_top">Free Customized Feedback Form (PHP / Perl Script) (Wizard)</a>
+
 <form action="feedback.php" method="post">
 <table border="0" cellpadding="8" cellspacing="8">
 <tr><td><label for="tswname">Name</label>:</td><td><input type="text" name="fullname" id="tswname" size="25" /></td></tr>
