--- a/thankyou.html
+++ b/thankyou.html
@@ -1,1 +1,4 @@
-<h1>Your message has been sent. Thank you for your comments. </h1>
+<html>
+  <body><h1>Your message has been sent. Thank you for your comments. </h1>
+</body>
+</html>
