--- a/feedback.html
+++ b/feedback.html
@@ -26,6 +26,8 @@ Form by <a href="http://www.thesitewizard.com/">thesitewizard.com</a>
 <img src="http://www.thesitewizard.com/images/tsw88x31pow.gif" border="0" alt="Free Site Design Tips and Tutorials at thesitewizard.com" width="88" height="31" /></a>
 <!-- THESITEWIZARD.COM LINK CODE ENDS HERE -->
 
+<a href="http://www.thesitewizard.com/wizards/feedbackform.shtml" target="_top">Free Customized Feedback Form (PHP / Perl Script) (Wizard)</a>
+
 </body>
 </html>
 
